Fixing z-index animation bug

--- a/src/slider/slider.css
+++ b/src/slider/slider.css
@@ -20,7 +20,7 @@
     display: flex;
     position: absolute;
     height:100%;
-    transition: transform 0.3s ease-in-out, display 0.3s 0s, opacity 0.3s ease-in-out, z-index 0.3s 0s, filter 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out, display 0.3s 0s, opacity 0.3s ease-in-out, z-index 0.5s 0s, filter 0.3s ease-in-out;
     transform: translateX(0) scale(75%);
     z-index: -3;
     opacity: 0;
@@ -37,7 +37,7 @@
     z-index:1;
 }
 .slider .imgs .img#next{
-    z-index:-1;
+    z-index:-2;
     filter: blur(4px);
 }
 .slider .imgs .img#prev{
